Avoid overlapping text on Russian and Farsi projects
Account for the fact that many wikis use `mbox-text-div` rather
than `mbox-text-span` and that the element might not be display
block/inline block

Bug: T206887

--- a/resources/skins.minerva.content.styles/templates/ambox.less
+++ b/resources/skins.minerva.content.styles/templates/ambox.less
@@ -39,7 +39,10 @@ table.ambox {
 
 	// Assuming that most ambox templates wrap content in this element.
 	// See https://en.wikipedia.org/w/index.php?title=Module:Message_box&action=raw (search for 'mbox-text-span').
+	// https://phabricator.wikimedia.org/T206887 suggests .mbox-text-div is also needed.
+	.mbox-text-div,
 	.mbox-text-span {
+		display: inline-block;
 		max-height: @contentLineHeight * 2em;
 		// All will have this height (approx 2 lines) even if a single line e.g. {{dictdef}} when on mobile.
 		// Overriden later in tablet styles.
